# energy-trading-risk-models

./: .editorconfig  .gitignore  LICENSE.txt  README.md  constants.py  init  pyproject.toml  run.py  tasks.py
.github/: dependabot.yml
.github/workflows/: python-ci-deploy.yaml  python-ci.yaml
data/metadata/: catalog.yml
example_usage/: cointegration_demo.py  data.py  stationarity_demo.py
notebooks/: descriptive_analysis.ipynb
src/: __main__.py
src/data/: __init__.py  catalog.py  dataset.py  duckdb_engine.py  interface.py  source.py
src/reports/: descriptive_tables.py
src/stats/: cointegration.py  descriptive.py  stationarity.py  validation.py
tests/: test_pass.py
