[tool.poetry]
name = ":model_name"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
repository = "https://github.com/kyosenergy/:model_name"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
kyoslib_py = "^5.3.0"
duckdb = "^1.4.4"
statsmodels = "^0.14.6"
arch = "^8.0.0"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
safety = "^2.3.5"
darglint = "^1.8.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_model = "src.entry:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke"]

[tool.black]
line-length = 99
skip-string-normalization = 1
